<resources>
    <string name="app_name">Udacity</string>
    <string name="action_settings">Settings</string>
    <string name="nanaodegree">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My own app</string>
    <string name="button_launch">"This Button Will Launch "</string>
</resources>
